--- a/dist.ini
+++ b/dist.ini
@@ -11,7 +11,9 @@ copyright_year   = 2013
 
 [Prereqs]
 HTTP::Tiny = 0
+List::Util = 0
 Moo = 0
+Scalar::Util = 0
 Regexp::Common = 0
 XML::LibXML = 0
 Test::More = 0
