--- a/dist.ini
+++ b/dist.ini
@@ -8,14 +8,21 @@ copyright_year   = 2013
 
 [PodWeaver]
 
+[MetaResources]
+homepage = http://github.com/reneeb/OTRS-Repository
+bugtracker.web = http://github.com/reneeb/OTRS-Repository/issues
+repository.url = http://github.com/reneeb/OTRS-Repository.git
+repository.web = http://github.com/reneeb/OTRS-Repository
+repository.type = git
+
 [@Basic]
 [@Git]
 
 [Prereqs]
-HTTP::Tiny = 0
-List::Util = 0
-Moo = 0
-Scalar::Util = 0
-Regexp::Common = 0
-XML::LibXML = 0
-Test::More = 0
+HTTP::Tiny = 0.036
+List::Util = 1.33
+Moo = 1.003001
+Scalar::Util = 1.33
+Regexp::Common = 2013031301
+XML::LibXML = 2.0106
+Test::More = 0.99
