fix dist (updated dist.ini)

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = OTRS-Repository
 author  = Renee Baecker <github@renee-baecker.de>
 license = Artistic_2_0
 copyright_holder = Renee Baecker
-copyright_year   = 2013
+copyright_year   = 2017
 
 [VersionFromModule]
 
@@ -20,6 +20,7 @@ repository.type = git
 
 [Prereqs]
 HTTP::Tiny = 0.036
+HTTP::Tiny::FileProtocol = 0.01
 List::Util = 1.33
 Moo = 1.003001
 Scalar::Util = 1.33
