--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest', 'windows-latest']
-        perl: [ '5.10', '5.20', '5.24', 'latest' ]
+        os: ['ubuntu-latest']
+        perl: [ '5.20', '5.24', '5.26', '5.28', '5.30', 'latest' ]
         threaded: [true, false]
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }} (threaded ${{ matrix.threaded }} )
     steps:
@@ -31,6 +31,7 @@ jobs:
         with:
           perl-version: ${{ matrix.perl }}
           multi-thread: ${{ matrix.threaded }}
+      - run: apt install libxml2-dev
       - run: cpanm ExtUtils::MakeMaker Module::Build Dist::Zilla
       - run: perl -V
       - run: |
