--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest']
-        perl: [ '5.20', '5.24', '5.26', '5.28', '5.30', 'latest' ]
+        perl: [ '5.20', '5.24', '5.26', '5.28', '5.30', '5.32', 'latest' ]
         threaded: [true, false]
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }} (threaded ${{ matrix.threaded }} )
     steps:
