rename to OPM::Repository

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = OTRS-Repository
+name    = OPM-Repository
 author  = Renee Baecker <github@renee-baecker.de>
 license = Artistic_2_0
 copyright_holder = Renee Baecker
@@ -9,10 +9,10 @@ copyright_year   = 2017
 [PodWeaver]
 
 [MetaResources]
-homepage = http://github.com/reneeb/OTRS-Repository
-bugtracker.web = http://github.com/reneeb/OTRS-Repository/issues
-repository.url = http://github.com/reneeb/OTRS-Repository.git
-repository.web = http://github.com/reneeb/OTRS-Repository
+homepage = http://github.com/reneeb/OPM-Repository
+bugtracker.web = http://github.com/reneeb/OPM-Repository/issues
+repository.url = http://github.com/reneeb/OPM-Repository.git
+repository.web = http://github.com/reneeb/OPM-Repository
 repository.type = git
 
 [@Basic]
