run each dzil command separately

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,8 @@ jobs:
       - run: sudo apt-get install -y libxml2-dev cpanminus
       - run: sudo cpanm ExtUtils::MakeMaker Module::Build Dist::Zilla
       - run: perl -V
-      - run: |
-          dzil authordeps --missing | sudo cpanm --notest
-          dzil listdeps --author --missing | sudo cpanm --notest
-          dzil test --author --release
+      - run: dzil authordeps --missing | sudo cpanm --notest
+      - run: dzil listdeps --author --missing | sudo cpanm --notest
+      - run: dzil test --author --release
       - run: prove -lv t
 
