play with github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
       - run: dzil listdeps --author --missing | sudo cpanm --notest
       - run: dzil test --author --release
       - run: sudo cpanm --installdeps .
+      - run: sudo cat ~root/.cpanm/build.log
       - run: perl -MMoo -E 'p %INC'
       - run: prove -lv t
 
