play with github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       - run: sudo apt-get install -y libxml2-dev cpanminus
       - run: sudo cpanm ExtUtils::MakeMaker Module::Build Dist::Zilla Data::Printer
       - run: perl -V
-      - run: dzil authordeps --missing | sudo cpanm --notest
-      - run: sudo cat ~root/.cpanm/build.log
+      - run: dzil authordeps --missing | cpanm --notest
+      - run: sudo cat ~/.cpanm/build.log
       - run: dzil listdeps --author --missing | sudo cpanm --notest
       - run: dzil test --author --release
       - run: sudo cpanm --installdeps .
