play with github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           perl-version: ${{ matrix.perl }}
           multi-thread: ${{ matrix.threaded }}
       - run: sudo apt-get install -y libxml2-dev cpanminus
+      - run: cpanm --force Sub::Name
       - run: cpanm ExtUtils::MakeMaker Module::Build Dist::Zilla Data::Printer
       - run: perl -V
       - run: dzil authordeps --missing | cpanm --notest
