--- a/dist.ini
+++ b/dist.ini
@@ -1,23 +1,14 @@
 name    = OPM-Repository
-author  = Renee Baecker <github@renee-baecker.de>
+author  = Renee Baecker <reneeb@cpan.org>
 license = Artistic_2_0
 copyright_holder = Renee Baecker
 copyright_year   = 2017
+version = 1.0.0
 
-[VersionFromModule]
-[SyncCPANfile]
-
-[PodWeaver]
-
-[MetaResources]
-homepage = http://github.com/reneeb/OPM-Repository
-bugtracker.web = http://github.com/reneeb/OPM-Repository/issues
-repository.url = http://github.com/reneeb/OPM-Repository.git
-repository.web = http://github.com/reneeb/OPM-Repository
-repository.type = git
-
-[@Basic]
-[@Git]
+[@PERLSRVDE]
+repository_type = github
+repository_path = perlservices/OPM-Repository
+is_cpan = 1
 
 [Prereqs]
 HTTP::Tiny = 0.036
